--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <div class="wrapper">
       <header>
         <button>High Scores</button>
-        <p>0</p>
-        <p class="Timer-count">Time:</p>
+        <div class="timer">60</div>
+        <div>Time:</div>
         
       </header>
       <div class="card">
@@ -30,7 +30,7 @@
         </div>
       </div>
     </div>
-    <script src="script.js"></script>
+    <script src="java.js"></script>
   </body>
 </html>
 
